// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwrite source input ArrayBuffer 1`] = `
[
  ArrayBuffer [],
  ArrayBuffer [],
]
`;

exports[`overwrite source input ArrayBuffer 2`] = `
[
  ArrayBuffer [],
  ArrayBuffer [],
]
`;

exports[`overwrite source input Buffer & ArrayBuffer 1`] = `
[
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
  {},
  ArrayBuffer [],
]
`;

exports[`overwrite source input Buffer & ArrayBuffer 2`] = `
[
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
  {},
  ArrayBuffer [],
]
`;

exports[`overwrite source input Buffer 1`] = `
[
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
  {},
]
`;

exports[`overwrite source input Buffer 2`] = `
[
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
  {},
]
`;

exports[`overwrite source input Map 1`] = `
[
  Map {
    "a" => 1,
    "b" => 2,
    "c" => 3,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
  },
]
`;

exports[`overwrite source input Map 2`] = `
[
  Map {
    "a" => 1,
    "b" => 2,
    "c" => 3,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
  },
]
`;

exports[`overwrite source input RegExp 1`] = `
[
  /1/,
  {},
  /1/g,
  /1/i,
]
`;

exports[`overwrite source input RegExp 2`] = `
[
  /1/,
  {},
  /1/g,
  /1/i,
]
`;

exports[`overwrite source input boolean 1`] = `
[
  true,
  false,
]
`;

exports[`overwrite source input boolean 2`] = `
[
  true,
  false,
]
`;

exports[`overwrite source input boolean 2 1`] = `
[
  true,
  false,
  null,
  0,
  undefined,
  NaN,
  Infinity,
  "",
]
`;

exports[`overwrite source input boolean 2 2`] = `
[
  true,
  false,
  null,
  0,
  undefined,
  NaN,
  Infinity,
  "",
]
`;

exports[`overwrite source input function 1`] = `
[
  [Function],
  [Function],
  [Function],
]
`;

exports[`overwrite source input function 2`] = `
[
  [Function],
  [Function],
  [Function],
]
`;

exports[`overwrite source input function 2 1`] = `
[
  [Function],
  [Function],
  [Function],
  {},
]
`;

exports[`overwrite source input function 2 2`] = `
[
  [Function],
  [Function],
  [Function],
  {},
]
`;

exports[`overwrite source input main mixin test 1`] = `
[
  1,
  0,
  true,
  undefined,
  null,
  false,
  [
    "a",
    "b",
    "c",
  ],
  [
    "a",
    "c",
    "b",
  ],
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
  {
    "a": {
      "b": undefined,
    },
  },
  {
    "a": {},
  },
  {
    "a": {
      "b": 3,
      "c": undefined,
    },
  },
  /1/,
  {},
  /1/g,
  /1/i,
  "1",
  "0",
  "true",
  "undefined",
  "null",
  "false",
  "",
  NaN,
  Infinity,
  [Function],
  [Function],
  [Function],
]
`;

exports[`overwrite source input main mixin test 2`] = `
[
  1,
  0,
  true,
  undefined,
  null,
  false,
  [
    "a",
    "b",
    "c",
  ],
  [
    "a",
    "c",
    "b",
  ],
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
  {
    "a": {
      "b": undefined,
    },
  },
  {
    "a": {},
  },
  {
    "a": {
      "b": 3,
      "c": undefined,
    },
  },
  /1/,
  {},
  /1/g,
  /1/i,
  "1",
  "0",
  "true",
  "undefined",
  "null",
  "false",
  "",
  NaN,
  Infinity,
  [Function],
  [Function],
  [Function],
]
`;

exports[`overwrite source input number 1`] = `
[
  1,
  2,
  3,
  0,
]
`;

exports[`overwrite source input number 2`] = `
[
  1,
  2,
  3,
  0,
]
`;

exports[`overwrite source input number 2 1`] = `
[
  1,
  2,
  3,
  0,
  NaN,
  Infinity,
]
`;

exports[`overwrite source input number 2 2`] = `
[
  1,
  2,
  3,
  0,
  NaN,
  Infinity,
]
`;

exports[`overwrite source input object 1`] = `
[
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
]
`;

exports[`overwrite source input object 2`] = `
[
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
]
`;

exports[`overwrite source input string 1`] = `
[
  "1",
  "2",
  "3",
  "0",
  "",
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`overwrite source input string 2`] = `
[
  "1",
  "2",
  "3",
  "0",
  "",
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`overwrite source input string[] 1`] = `
[
  [
    "a",
    "b",
    "c",
  ],
]
`;

exports[`overwrite source input string[] 2`] = `
[
  [
    "a",
    "b",
    "c",
  ],
]
`;
